# hidrelay-fw

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md
.githooks/: bootstrap  pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml  validation.yml
cmake/: Bootstrap.cmake  CommonOptions.cmake  DependencyBootstrap.cmake  PlatformBootstrap.cmake  PlatformSelect.cmake  ToolchainBootstrap.cmake
doc/: architecture.md  build.md  logo.png~  soak.md
doc/site/: astro.config.mjs  package-lock.json  package.json
doc/site/public/: site.webmanifest
doc/site/scripts/: build-icons.mjs
doc/site/src/pages/: index.astro
doc/site/src/styles/: global.css
include/: app.h  app_diag.h  apple_keyboard.h  apple_trackpad.h  bt_manager.h  button_fsm.h  hid_device_map.h  hid_report_policy.h  hid_report_remap.h  hid_transport.h  hid_transport_runtime.h  led_ui.h  operator_auth.h  operator_command.h  pair_db.h  pair_store.h  platform_api.h  platform_bt_port.h  platform_usb_port.h  transport_stack.h  usb_bridge.h  usb_runtime.h
include/util/: cleanup.h  sha256.h
platform/: pico_2_w
platform/pico_w/: CMakeLists.txt  bootstrap.cmake  toolchain.cmake.in
platform/pico_w/cmake/: options.cmake  target.cmake
platform/pico_w/cmake/Platform/: PICO.cmake
platform/pico_w/include/: btstack_config.h  platform_pico_w_hw.h  platform_pico_w_pair_store.h  platform_pico_w_stack.h  platform_pico_w_state.h  platform_pico_w_tinyusb_runtime.h  tusb_config.h
platform/pico_w/patches/: picotool-reset-interface.patch
platform/pico_w/src/: platform_api_pico_w.c  platform_pico_w_bt_port.c  platform_pico_w_hw.c  platform_pico_w_pair_store.c  platform_pico_w_stack.c  platform_pico_w_state.c  platform_pico_w_storage.c  platform_pico_w_tinyusb_desc.c  platform_pico_w_tinyusb_runtime.c  platform_pico_w_usb_reset.c
src/: app.c  app_diag.c  apple_keyboard.c  apple_trackpad.c  bt_manager.c  button_fsm.c  hid_device_map.c  hid_report_policy.c  hid_report_remap.c  hid_transport_runtime.c  led_ui.c  main.c  operator_auth.c  operator_command.c  pair_db.c  pair_store.c  transport_stack.c  usb_bridge.c  usb_descriptors.c  usb_runtime.c
src/util/: cleanup.c  sha256.c
tool/: CMakeLists.txt  cache_probe.c  diag_capture.c  diag_summary.sh
tool/src/: app_replay.c  diag_capture.c
